[package]
name = "disemvowel-in-rust"
version = "1.0.0"
authors = ["Nic McPhee <mcphee@morris.umn.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.1.0"
assert_cmd = "0.10"
predicates = "1"

[[bin]]
name = "disemvowel-in-rust"
path = "disemvowel/disemvowel.rs"

[[bin]]
name = "creating_a_reference_cycle"
path = "Creating_a_Reference_Cycle/creating_a_reference_cycle.rs"

[[bin]]
name = "palindrome"
path = "palindrome/main.rs"